// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders the authenticatedNavBar correctly when isAuthenticated is true 1`] = `
<div>
  <header
    class="sticky top-0 z-20"
  >
    <div
      data-testid="authenticated-navbar"
    >
      <div
        class="dark:bg-NavBar-bg-colour-dark bg-NavBar-bg-colour text-NavBar-item-text-colour dark:text-NavBar-item-text-colour-dark "
      >
        <div
          class="pt-4 tablet:pt-0 h-auto px-4 laptop:container laptop:mx-auto flex flex-wrap desktop:flex-nowrap content-center items-center"
        >
          <div
            class="h-[35px] tablet:h-[42px] desktop:h-[55px] inline-block grow"
          >
            <a
              aria-label="Navigate Home"
              class="inline-block h-full hover:opacity-100"
              data-testid="brandLogo"
              href="/members-home"
            >
              <img
                alt="Navigate Home"
                class="fill-logo-colour dark:fill-logo-colour-dark h-full"
              />
            </a>
          </div>
          <div
            class="w-auto hidden tablet:block tablet:w-full h-[72px] desktop:w-auto order-none tablet:order-last desktop:order-none mx-0 mx-4 2xl:mx-7 grow 2xl:grow-0"
          >
            <div
              class="flex flex-1 gap-5 h-full justify-between"
            >
              <div
                class="font-['MuseoSans'] text-xs font-semibold cursor-pointer text-colour-primary dark:text-colour-primary-dark my-1"
                data-testid="on-click-link"
              >
                Mock Label
              </div>
            </div>
          </div>
          <div
            class="w-full tablet:w-[343px] order-last tablet:order-none"
          >
            <form
              class="p-4 z-10 w-full px-0 desktop:px-4"
            >
              <div
                class="relative"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magnifying-glass absolute w-[24px] h-[24px] left-2 px-2 top-1/2 transform -translate-y-1/2 text-searchBar-icon-colour-light dark:text-searchBar-icon-colour-dark"
                  data-icon="magnifying-glass"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                    fill="currentColor"
                  />
                </svg>
                <input
                  autocomplete="off"
                  class="search-bar text-ellipsis pl-14 pr-12 py-3 rounded-full w-full overflow-x-hidden bg-searchBar-bg-colour-light dark:bg-searchBar-bg-colour-dark focus:outline-none text-searchBar-label-colour-light dark:text-searchBar-label-colour-dark dark:border-searchBar-outline-colour-dark font-searchBar-label-font text-searchBar-label-font font-searchBar-label-font-weight tracking-searchBar-label-font leading-searchBar-label-font border border-searchBar-outline-colour-light"
                  enterkeyhint="search"
                  id="searchInput"
                  placeholder="Search for offers or companies"
                  type="search"
                  value=""
                />
              </div>
            </form>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="hidden"
            >
              <button
                aria-label="My Account"
                class="flex h-full justify-center items-center gap-1 cursor-pointer text-NavBar-icon-colour dark:text-NavBar-icon-colour-dark"
                data-testid="mobile-account-toggle-button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-user fa-lg"
                  data-icon="user"
                  data-prefix="fas"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 448 512"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
            <div
              class="tablet:hidden"
            >
              <button
                class="flex h-full justify-center items-center gap-1 cursor-pointer tablet:hidden text-NavBar-icon-colour dark:text-NavBar-icon-colour-dark"
                data-testid="mobile-nav-toggle-button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars "
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 448 512"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Navbar renders the unauthenticated header when isAuthenticated if false 1`] = `
<div>
  <header
    class="sticky top-0 z-20"
  >
    <div
      data-testid="unauthenticated-navbar"
    >
      <div
        class="dark:bg-NavBar-bg-colour-dark bg-NavBar-bg-colour text-NavBar-item-text-colour dark:text-NavBar-item-text-colour-dark "
      >
        <div
          class="h-[72px] px-4 tablet:px-14 laptop:container laptop:mx-auto flex justify-between items-center"
        >
          <a
            aria-label="Navigate Home"
            class="h-[35px] tablet:h-[42px] laptop:h-[55px] hover:opacity-100"
            data-testid="brandLogo"
            href="/members-home"
          >
            <img
              alt="Navigate Home"
              class="fill-logo-colour dark:fill-logo-colour-dark h-full"
            />
          </a>
          <div
            class="flex gap-7 h-full items-center"
          >
            <div
              class="hidden desktop:flex desktop:h-full"
            >
              <div
                class="flex flex-1 gap-5 h-full justify-between"
              >
                <div
                  class="font-['MuseoSans'] text-xs font-semibold cursor-pointer text-colour-primary dark:text-colour-primary-dark my-1"
                  data-testid="on-click-link"
                >
                  Mock Label
                </div>
              </div>
            </div>
            <div
              class="flex gap-2 items-center"
            >
              <div
                class="hidden tablet:flex tablet:gap-2 tablet:items-center"
              >
                <div
                  class="hidden tablet:flex desktop:hidden"
                />
                <button
                  class="rounded transition border py-[8px] px-[24px] h-[40px] flex items-center justify-center gap-[8px]  text-button-secondary-default-label-colour-light dark:text-button-secondary-default-label-colour-dark hover:bg-button-secondary-hover-bg-colour-light dark:hover:bg-button-secondary-hover-bg-colour-dark hover:text-button-secondary-hover-label-colour-light dark:hover:text-button-secondary-hover-label-colour-dark hover:border-transparent focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00]  border-button-secondary-default-border-colour-light dark:border-button-secondary-default-border-colour-dark  text-button-label-font font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
                  type="button"
                >
                  Log in
                </button>
                <button
                  class="rounded transition border py-[8px] px-[24px] h-[40px] flex items-center justify-center gap-[8px]  text-button-primary-default-label-colour-light dark:text-button-primary-default-label-colour-dark hover:bg-button-primary-hover-bg-colour-light dark:hover:bg-button-primary-hover-bg-colour-dark hover:text-button-primary-hover-label-colour-light dark:hover:text-button-primary-hover-label-colour-dark focus:outline-[#2EB8E6] dark:focus:outline-[#FFFF00] bg-button-primary-default-bg-colour-light dark:bg-button-primary-default-bg-colour-dark border-none  text-button-label-font font-button-label-font font-button-label-font-weight tracking-button-label-font leading-button-label-font"
                  type="button"
                >
                  Sign up
                </button>
              </div>
              <div
                class="hidden desktop:flex"
              />
              <button
                class="flex h-full justify-center items-center gap-1 cursor-pointer tablet:hidden text-NavBar-icon-colour dark:text-NavBar-icon-colour-dark"
                data-testid="mobile-nav-toggle-button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-bars "
                  data-icon="bars"
                  data-prefix="fas"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 448 512"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="h-[72px] hidden tablet:px-14 tablet:flex desktop:hidden desktop:mx-auto"
        >
          <div
            class="flex flex-1 gap-5 h-full justify-between"
          >
            <div
              class="font-['MuseoSans'] text-xs font-semibold cursor-pointer text-colour-primary dark:text-colour-primary-dark my-1"
              data-testid="on-click-link"
            >
              Mock Label
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;
